ビルドと実行環境の正常化
・.gitignore に無視対象追加
・quickstart.sh の Wondows 用パス区切り文字が間違っていたのを修正
・Java3D の 64bit Windows 用 DLL に実行権限が無く、使うとエラーになっていたのを修正
・xalan ライブラリを導入して「警告: OutputPropertiesFactoryは内部所有のAPIであり、今後のリリースで削除される可能性があります」が出ない様にした
・JDK 1.7 以降でもコンパイルが通る様に、スクリーンショットの書き出しに javax.imageio.ImageIO を使う様に戻した(エンコードは jpg -> png に変更)

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,17 @@ Thumbs.db
 .gradle/
 build/
 
+# GNU GLOBAL
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+
 # local setting data
 NetworkMapEditor.ini
+
+# execution result data
+tick.txt
+
+# screen shots
+netmas/screenshots/*
