ROAD-CLOSED タグが付けられたリンクを通行止めにする機能を追加
・エディタでリンク選択時の右クリックメニューに "Set Road Closed" 項目を追加
・エディタでリンク選択時の右クリックメニューの "Remove One-way" 項目を "Remove One-way / Road Closed" に変更
・エディタとシミュレータそれぞれのマップ上で ONE-WAY-POSITIVE -> 紫、ONE-WAY-NEGATIVE -> ライトブルー、ROAD-CLOSED -> 赤でリンクが表示されるようにした
・エディタでマウスカーソル上の ONE-WAY-POSITIVE/ONE-WAY-NEGATIVE リンクが青く表示されないバグを修正

--- a/netmas/src/main/resources/link_appearance.json
+++ b/netmas/src/main/resources/link_appearance.json
@@ -55,21 +55,27 @@ Usable color names:
         transparency: 0.2525
     },
     'ONE-WAY-POSITIVE': {
-        width: 0.5,
-        width_fixed: false,
-        color: 'ARED',
-        transparency: 0.7525
+        width: 3.0,
+        width_fixed: true,
+        color: 'PURPLE',
+        transparency: 0.5
     },
     'ONE-WAY-NEGATIVE': {
-        width: 0.5,
-        width_fixed: false,
-        color: 'ARED',
-        transparency: 0.7525
+        width: 3.0,
+        width_fixed: true,
+        color: 'LIGHTBLUE',
+        transparency: 0.25
     },
     ONEWAY: {
         width: 0.5,
         width_fixed: false,
         color: 'ARED',
         transparency: 0.7525
+    },
+    'ROAD-CLOSED': {
+        width: 3.0,
+        width_fixed: true,
+        color: 'RED',
+        transparency: 0.25
     },
 }
