カレントディレクトリが CrowdWalk/netmas 以外でも、CrowdWalk を起動することができるようにした
・環境変数 CROWDWALK に CrowdWalk/netmas ディレクトリのパスを設定すると有効になる。
・CrowdWalk をホームディレクトリの下に git clone している場合は以下の2行を .bashrc に記述しておけば crowdwalk コマンドで実行できるようになる。

export CROWDWALK=~/CrowdWalk/netmas     … CentOS の場合
export CROWDWALK=C:/cygwin/home/$USER/CrowdWalk/netmas     … Cygwin の場合
alias crowdwalk="sh $CROWDWALK/quickstart.sh"

・カレントディレクトリに関係なく参照できるようにするため、画像ファイルをリソース化した。

--- a/netmas/build.gradle
+++ b/netmas/build.gradle
@@ -104,10 +104,12 @@ processResources {
         "git rev-list HEAD".execute().in.eachLine { revision++ }
         def commit_hash = "git rev-parse --short HEAD".execute().text.trim()
 
-        filter(ReplaceTokens, tokens: ['version': version])
-        filter(ReplaceTokens, tokens: ['branch': branch])
-        filter(ReplaceTokens, tokens: ['revision': "" + revision])
-        filter(ReplaceTokens, tokens: ['commit_hash': commit_hash])
+        filesMatching("netmas.properties") {
+            filter(ReplaceTokens, tokens: ['version': version])
+            filter(ReplaceTokens, tokens: ['branch': branch])
+            filter(ReplaceTokens, tokens: ['revision': "" + revision])
+            filter(ReplaceTokens, tokens: ['commit_hash': commit_hash])
+        }
         println "    version -> ${version}.${branch}.${revision}-${commit_hash}"
     }
 }
