add JSON utility to ClassFinder.

--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -1,11 +1,17 @@
 TOP : build
 
-SRCFILES = ClassFinder.java
+PACKAGE = nodagumi.Itk
+CLASSES = ClassFinder
+SRCFILES = $(foreach klass,$(CLASSES),$(klass).java)
+ALLTESTS = $(foreach klass,$(CLASSES),$(PACKAGE).$(klass)_Test)
+
 BASEDIR = ../../../../..
 JARDIR = $(BASEDIR)/libs/jar
 #CLASSDIR = $(BASEDIR)/build/classes/main/nodagumi/Itk/.
 CLASSDIR = $(BASEDIR)/build/libs/netmas.jar
-CLASSPATH = $(CLASSDIR):$(JARDIR)/junit-4.12.jar:$(JARDIR)/hamcrest-core-1.3.jar
+JARS = $(JARDIR)/junit-4.12.jar:$(JARDIR)/hamcrest-core-1.3.jar:$(JARDIR)/jsonic-1.2.11.jar
+CLASSPATH = $(CLASSDIR):$(JARS)
+JUNITCLASS = org.junit.runner.JUnitCore # for JUnit v.4
 
 doc ::
 	javadoc -d doc -encoding utf-8 -charset utf-8 $(SRCFILES)
@@ -14,4 +20,10 @@ build :
 	( cd $(BASEDIR) ; gradle )
 
 test ::
-	java -cp $(CLASSPATH) org.junit.runner.JUnitCore nodagumi.Itk.ClassFinderTest
+	java -cp $(CLASSPATH) $(JUNITCLASS) $(PACKAGE).ClassFinder_Test
+
+test_all ::
+	java -cp $(CLASSPATH) $(JUNITCLASS) $(ALLTESTS)
+
+foo ::
+	echo $(ALLTESTS)
