--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -1,5 +1,15 @@
 TOP : build
 
+## common tricks
+## 文字列中の comma を操作したい場合、$(,) と参照できる。
+,:=,
+## 文字列中の space を操作したい場合、$(_) または $( ) と参照できる。
+_ := 
+_ += 
+$(_) :=
+$(_) +=
+
+## defs
 PACKAGE = nodagumi.Itk
 CLASSES = ClassFinder Itk
 SRCFILES = $(foreach klass,$(CLASSES),$(klass).java)
@@ -7,9 +17,10 @@ ALLTESTS = $(foreach klass,$(CLASSES),$(PACKAGE).$(klass)_Test)
 
 BASEDIR = ../../../../..
 JARDIR = $(BASEDIR)/libs/jar
-#CLASSDIR = $(BASEDIR)/build/classes/main/nodagumi/Itk/.
-CLASSDIR = $(BASEDIR)/build/libs/netmas.jar
-JARS = $(JARDIR)/junit-4.12.jar:$(JARDIR)/hamcrest-core-1.3.jar:$(JARDIR)/jsonic-1.2.11.jar
+CLASSDIR = $(BASEDIR)/build/classes/main
+#CLASSDIR = $(BASEDIR)/build/libs/netmas.jar
+JARLIST = junit-4.12 hamcrest-core-1.3 jsonic-1.2.11
+JARS = $(subst $( ),:,$(foreach jar,$(JARLIST),$(JARDIR)/$(jar).jar))
 CLASSPATH = $(CLASSDIR):$(JARS)
 JUNITCLASS = org.junit.runner.JUnitCore # for JUnit v.4
 
@@ -32,5 +43,8 @@ test_Itk ::
 test_all ::
 	java -cp $(CLASSPATH) $(JUNITCLASS) $(ALLTESTS)
 
+FOO = a b c
 foo ::
-	echo $(ALLTESTS)
+	echo $(JARS)
+	echo $(subst $( ),:,$(FOO))
+	echo "$( )"
