Make のオプションで、build_q を指定すると、無駄な出力が減って、emacs でデバッグしやすくなる。

--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -28,7 +28,14 @@ JUNITCLASS = org.junit.runner.JUnitCore # for JUnit v.4
 doc ::
 	javadoc -d doc -encoding utf-8 -charset utf-8 $(SRCFILES)
 
-build :
+build : build_v
+
+## quiet
+build_q :
+	( cd $(BASEDIR) ; gradle -q )
+
+## verbose
+build_v :
 	( cd $(BASEDIR) ; gradle )
 
 ##------------------------------------------------------------
