JSONIC Version up に伴うリソース変更。WAIT の解析処理修正。 * JSONIC を新しくしたため、json で書いたリソースを修正。 * WAIT の解析を少しまともにした。ただし、JSON対応はまだ。

--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -80,8 +80,9 @@ run0 ::
 run0d ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0d))
 
+run_wait :: run0b
 run0b ::
-	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE2))
+	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0b))
 
 run1 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE1))
