MapLink 中で、エージェントのlaneへの無駄な sort 実行の排除など。

--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -101,6 +101,8 @@ run1_cui ::
 
 run2 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE2))
+run2_cui ::
+	(cd $(BASEDIR) ; time bash quickstart.sh $(SAMPLE2) cui)
 run2w ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE2w))
 
