--- a/netmas/build.gradle
+++ b/netmas/build.gradle
@@ -21,25 +21,23 @@ repositories {
     mavenCentral()
 }
 
-manifest.mainAttributes("Main-Class" : "main")
-
 dependencies {
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-        compile group: 'org.codehaus.groovy', name: 'groovy', version: '1.7.0'
-        compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
-        compile group: 'xalan', name: 'xalan', version: '2.7.0'
+        compile localGroovy()   // Gradleに同梱されているGroovyを使う
+        compile 'commons-cli:commons-cli:1.2'
+        compile 'xalan:xalan:2.7.0'
         compile 'net.arnx:jsonic:1.3.7'
-	compile 'net.sf.opencsv:opencsv:2.3'
-	compile 'junit:junit:4.12'
+        compile 'net.sf.opencsv:opencsv:2.3'
+        compile 'junit:junit:4.12'
         compile fileTree(dir: 'libs/jar', include: '*.jar')
     } else {
-        groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.0.0'
-        // compile 'commons-cli:commons-cli:1.2'
+        compile localGroovy()   // Gradleに同梱されているGroovyを使う
+        compile 'commons-cli:commons-cli:1.2'
         // compile 'org.geotools:gt-shapefile:8.5'
         // compile 'org.geotools:gt-swing:8.5'
         compile 'net.arnx:jsonic:1.3.7'
-	compile 'net.sf.opencsv:opencsv:2.3'
-	compile 'junit:junit:4.12'
+        compile 'net.sf.opencsv:opencsv:2.3'
+        compile 'junit:junit:4.12'
         compile fileTree(dir: 'libs/jar/geotools-2.7-M3', include: '*.jar')
         compile fileTree(dir: 'libs/jar', include: '*.jar')
         compile fileTree(dir: 'libs/jar', include: '.SM.*.jar')
@@ -119,6 +117,7 @@ processResources {
 }
 
 jar {
+    manifest.mainAttributes("Main-Class" : "main")
     /*
     manifest {
         def manifestClasspath = configurations.runtime.collect { it.getName() }.join(',')
