--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -67,11 +67,11 @@ SAMPLE0d = sample/simpleGrid/properties-density.xml	#density model
 SAMPLE0w = sample/basic-sample/properties.xml		#wait
 SAMPLE0s2 = sample/2links/properties-width-100.xml	#stop (2link)
 SAMPLE0s4 = sample/4links/properties.xml		#stop (4link)
+SAMPLE0sm = sample/stop-sample/properties_24.json	#stop (門司港)
 SAMPLE1 = sample/simpleGrid/properties-lane.v1.xml	#simple, version1
 SAMPLE2 = sample/simpleGrid/properties-lane.v2.xml	#simple, version2
 SAMPLE2w = sample/basic-sample/properties.v2.xml	#wait, version2
 SAMPLE2i = sample/simpleGrid/properties-itk.v2.xml	#itk, version2
-
 
 run : run2
 
@@ -93,6 +93,8 @@ run0s2 ::
 
 run0s4 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0s4))
+run0sm ::
+	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0sm))
 
 run1 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE1))
