--- a/netmas/build.gradle
+++ b/netmas/build.gradle
@@ -33,10 +33,10 @@ dependencies {
     } else {
         // Linux/MacOS の場合は、gradle-1.12 を使うこと。
 	// また、groovy は別途、2.0.0 以上をインストールしておくこと。
-	groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.0.0'
+	groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.3.8'
         //compile localGroovy()   // Gradleに同梱されているGroovyを使う
 	//ivy "org.apache.ivy:ivy:2.3.0"
-	//compile 'org.codehaus.groovy:groovy-all:2.0.0'
+	//compile 'org.codehaus.groovy:groovy-all:2.3.8'
         compile 'commons-cli:commons-cli:1.2'
         // compile 'org.geotools:gt-shapefile:8.5'
         // compile 'org.geotools:gt-swing:8.5'
@@ -158,6 +158,17 @@ task clearCache() {
         println("Deleting gradle cache at ${f.absolutePath}")
         delete(f)
     }
+}
+
+/* [2015.01.28 I.Noda] gradle でトラブルと、どうもここが怪しい。
+ * なので、いざという時、クリアできるようにしておく。
+ */
+task cleanAll {
+     doFirst {
+       File f = file("./.gradle") ;
+       println("deleting ${f.absolutePath}") ;
+       delete(f) ;
+     }
 }
 
 /* task uberjar(type: Jar) { */
